--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="heading">
     <h1>This is my website :P</h1>
     <h2>Welcome</h2>
     <h3>more content coming soon</h3>
-    
+    </div>
 </body>
 </html>
